--- a/honestShopping/HSItemBuyInfoView.xib
+++ b/honestShopping/HSItemBuyInfoView.xib
@@ -11,12 +11,6 @@
             <rect key="frame" x="0.0" y="0.0" width="404" height="78"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Nw-yD-VIG">
-                    <rect key="frame" x="16" y="8" width="372" height="20"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Plm-bd-Pwt">
                     <rect key="frame" x="16" y="42" width="45" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -24,7 +18,8 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FB9-o6-zpd">
-                    <rect key="frame" x="333" y="36" width="55" height="34"/>
+                    <rect key="frame" x="344" y="36" width="44" height="34"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="Button">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,6 +28,12 @@
                         <action selector="collectBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="hge-tm-8f5"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Nw-yD-VIG">
+                    <rect key="frame" x="16" y="8" width="372" height="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -42,15 +43,22 @@
                 <constraint firstAttribute="trailing" secondItem="1Nw-yD-VIG" secondAttribute="trailing" constant="16" id="MXX-Bp-l2e"/>
                 <constraint firstItem="1Nw-yD-VIG" firstAttribute="leading" secondItem="Plm-bd-Pwt" secondAttribute="leading" id="PCs-8D-Xkj"/>
                 <constraint firstItem="1Nw-yD-VIG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="POs-GT-Kmw"/>
+                <constraint firstAttribute="trailing" secondItem="FB9-o6-zpd" secondAttribute="trailing" constant="16" id="WXT-Ou-t2f"/>
                 <constraint firstItem="FB9-o6-zpd" firstAttribute="top" secondItem="1Nw-yD-VIG" secondAttribute="bottom" constant="8" id="XAM-DX-nx6"/>
                 <constraint firstAttribute="bottom" secondItem="FB9-o6-zpd" secondAttribute="bottom" constant="8" id="mDb-wV-5dT"/>
                 <constraint firstItem="FB9-o6-zpd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Plm-bd-Pwt" secondAttribute="trailing" constant="16" id="uPg-2Y-eLP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="5iZ-1V-fFJ"/>
+                </mask>
+            </variation>
             <connections>
                 <outlet property="collectButton" destination="FB9-o6-zpd" id="Eiz-2H-ctc"/>
                 <outlet property="priceLabel" destination="Plm-bd-Pwt" id="yIY-Wv-fdI"/>
                 <outlet property="titleLabel" destination="1Nw-yD-VIG" id="EqY-82-EVs"/>
+                <outlet property="titleTrailingConstraint" destination="MXX-Bp-l2e" id="Mjm-hw-epB"/>
             </connections>
             <point key="canvasLocation" x="276" y="-107"/>
         </view>
