--- a/honestShopping/Base.lproj/Main.storyboard
+++ b/honestShopping/Base.lproj/Main.storyboard
@@ -514,10 +514,11 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2Xo-Sa-bb7">
                                 <rect key="frame" x="0.0" y="65" width="600" height="535"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                            <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WJ8-MW-XB6">
-                                <rect key="frame" x="0.0" y="65" width="600" height="535"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <tableView key="tableFooterView" hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WJ8-MW-XB6">
+                                    <rect key="frame" x="0.0" y="65" width="600" height="535"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </tableView>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -529,13 +530,9 @@
                             <constraint firstAttribute="trailing" secondItem="DhH-qN-zTp" secondAttribute="trailing" id="RuX-pO-kO1"/>
                             <constraint firstItem="DhH-qN-zTp" firstAttribute="leading" secondItem="IQO-Ak-sZ1" secondAttribute="leading" id="VGh-OT-UYz"/>
                             <constraint firstItem="6or-7R-b4s" firstAttribute="top" secondItem="2Xo-Sa-bb7" secondAttribute="bottom" id="bfN-AK-IZU"/>
-                            <constraint firstAttribute="bottom" secondItem="WJ8-MW-XB6" secondAttribute="bottom" id="cFh-L7-68L"/>
                             <constraint firstItem="DhH-qN-zTp" firstAttribute="top" secondItem="ACZ-en-LQk" secondAttribute="bottom" constant="8" id="neg-k2-B3g"/>
-                            <constraint firstItem="WJ8-MW-XB6" firstAttribute="leading" secondItem="IQO-Ak-sZ1" secondAttribute="leading" id="ocV-2y-d90"/>
                             <constraint firstItem="ACZ-en-LQk" firstAttribute="top" secondItem="Uqq-jU-kVB" secondAttribute="bottom" constant="8" id="ohS-nR-xaV"/>
-                            <constraint firstAttribute="trailing" secondItem="WJ8-MW-XB6" secondAttribute="trailing" id="qc2-EA-gO1"/>
                             <constraint firstItem="2Xo-Sa-bb7" firstAttribute="leading" secondItem="IQO-Ak-sZ1" secondAttribute="leading" id="rxt-RV-GMa"/>
-                            <constraint firstItem="WJ8-MW-XB6" firstAttribute="top" secondItem="DhH-qN-zTp" secondAttribute="bottom" id="tNZ-DZ-hhz"/>
                             <constraint firstItem="2Xo-Sa-bb7" firstAttribute="top" secondItem="ACZ-en-LQk" secondAttribute="bottom" constant="8" id="w8q-ih-XMs"/>
                             <constraint firstAttribute="bottom" secondItem="2Xo-Sa-bb7" secondAttribute="bottom" id="zVG-CW-8Uy"/>
                         </constraints>
@@ -653,7 +650,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="w7U-zg-PgV">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="w7U-zg-PgV">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -887,7 +884,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oS4-bT-Uxx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2503" y="4435"/>
+            <point key="canvasLocation" x="2547" y="4413"/>
         </scene>
         <!--Shopping Cart View Controller-->
         <scene sceneID="sQr-F6-oRp">
@@ -1758,7 +1755,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="73O-kv-jNG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1877" y="4435"/>
+            <point key="canvasLocation" x="1872" y="4371"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="uud-Do-X4e">
@@ -1851,6 +1848,63 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qBn-2I-dUn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="979" y="4371"/>
+        </scene>
+        <!--Shiqu View Controller-->
+        <scene sceneID="edk-es-oMZ">
+            <objects>
+                <viewController id="oSO-u5-X2U" customClass="HSShiquViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="coe-cd-qTG"/>
+                        <viewControllerLayoutGuide type="bottom" id="Tzo-rt-fEh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VyB-ce-c2O">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wq6-Dy-umy">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mUa-je-vpN">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="wq6-Dy-umy" secondAttribute="trailing" id="1vz-Ml-B0a"/>
+                            <constraint firstItem="wq6-Dy-umy" firstAttribute="top" secondItem="coe-cd-qTG" secondAttribute="bottom" id="51v-ub-iKf"/>
+                            <constraint firstItem="mUa-je-vpN" firstAttribute="top" secondItem="coe-cd-qTG" secondAttribute="bottom" id="ATT-xN-19D"/>
+                            <constraint firstItem="wq6-Dy-umy" firstAttribute="leading" secondItem="VyB-ce-c2O" secondAttribute="leading" id="EbD-ml-OiS"/>
+                            <constraint firstAttribute="trailing" secondItem="mUa-je-vpN" secondAttribute="trailing" id="Kcf-m4-dXL"/>
+                            <constraint firstAttribute="bottom" secondItem="mUa-je-vpN" secondAttribute="bottom" id="Xx4-Mg-NGZ"/>
+                            <constraint firstAttribute="bottom" secondItem="wq6-Dy-umy" secondAttribute="bottom" id="hF3-uP-QDP"/>
+                            <constraint firstItem="mUa-je-vpN" firstAttribute="leading" secondItem="VyB-ce-c2O" secondAttribute="leading" id="rzo-86-Id1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Kya-L1-tNb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vWa-xO-fMG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1872" y="5159"/>
+        </scene>
+        <!--Base Navigation View Controller-->
+        <scene sceneID="UIh-MB-cQ7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9H2-Gt-WmM" customClass="HSBaseNavigationViewController" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qA6-gY-k6k">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oSO-u5-X2U" kind="relationship" relationship="rootViewController" id="bti-O2-gWu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hil-DX-5DZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="979" y="5159"/>
         </scene>
     </scenes>
     <resources>
