--- a/honestShopping/HSItemBuyInfoView.xib
+++ b/honestShopping/HSItemBuyInfoView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -45,7 +45,7 @@
                 <constraint firstItem="1Nw-yD-VIG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="POs-GT-Kmw"/>
                 <constraint firstAttribute="trailing" secondItem="FB9-o6-zpd" secondAttribute="trailing" constant="16" id="WXT-Ou-t2f"/>
                 <constraint firstItem="FB9-o6-zpd" firstAttribute="top" secondItem="1Nw-yD-VIG" secondAttribute="bottom" constant="8" id="XAM-DX-nx6"/>
-                <constraint firstAttribute="bottom" secondItem="FB9-o6-zpd" secondAttribute="bottom" constant="8" id="mDb-wV-5dT"/>
+                <constraint firstAttribute="bottom" secondItem="FB9-o6-zpd" secondAttribute="bottom" priority="999" constant="8" id="mDb-wV-5dT"/>
                 <constraint firstItem="FB9-o6-zpd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Plm-bd-Pwt" secondAttribute="trailing" constant="16" id="uPg-2Y-eLP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
